--- a/UI/code/Login_RauMa/DashBoar/DashBoar.csproj
+++ b/UI/code/Login_RauMa/DashBoar/DashBoar.csproj
@@ -296,5 +296,8 @@
   <ItemGroup>
     <None Include="Resources\shutdown.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\raumadau.PNG" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
