--- a/UI/code/Login_RauMa/DAO/DAO.csproj
+++ b/UI/code/Login_RauMa/DAO/DAO.csproj
@@ -52,55 +52,55 @@
   <ItemGroup>
     <Compile Include="ChiTietHoaDonDAO.cs" />
     <Compile Include="CTHoaDon.cs">
-      <DependentUpon>QLRauMa.tt</DependentUpon>
+      <DependentUpon>QLRauMA.tt</DependentUpon>
     </Compile>
     <Compile Include="CTPhanQuyen.cs">
-      <DependentUpon>QLRauMa.tt</DependentUpon>
+      <DependentUpon>QLRauMA.tt</DependentUpon>
     </Compile>
     <Compile Include="DAO_loaisp.cs" />
     <Compile Include="DAO_sanpham.cs" />
     <Compile Include="HoaDon.cs">
-      <DependentUpon>QLRauMa.tt</DependentUpon>
+      <DependentUpon>QLRauMA.tt</DependentUpon>
     </Compile>
     <Compile Include="HoaDonDAO.cs" />
     <Compile Include="LoaiSP.cs">
-      <DependentUpon>QLRauMa.tt</DependentUpon>
+      <DependentUpon>QLRauMA.tt</DependentUpon>
     </Compile>
     <Compile Include="NhanVien.cs">
-      <DependentUpon>QLRauMa.tt</DependentUpon>
+      <DependentUpon>QLRauMA.tt</DependentUpon>
     </Compile>
     <Compile Include="NhanVienDAO.cs" />
     <Compile Include="PhanQuyen.cs">
-      <DependentUpon>QLRauMa.tt</DependentUpon>
+      <DependentUpon>QLRauMA.tt</DependentUpon>
     </Compile>
     <Compile Include="PhanQuyenDAO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="QLRauMa.Context.cs">
+    <Compile Include="QLRauMA.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>QLRauMa.Context.tt</DependentUpon>
+      <DependentUpon>QLRauMA.Context.tt</DependentUpon>
     </Compile>
-    <Compile Include="QLRauMa.cs">
+    <Compile Include="QLRauMA.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>QLRauMa.tt</DependentUpon>
+      <DependentUpon>QLRauMA.tt</DependentUpon>
     </Compile>
-    <Compile Include="QLRauMa.Designer.cs">
+    <Compile Include="QLRauMA.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>QLRauMa.edmx</DependentUpon>
+      <DependentUpon>QLRauMA.edmx</DependentUpon>
     </Compile>
     <Compile Include="SanPham.cs">
-      <DependentUpon>QLRauMa.tt</DependentUpon>
+      <DependentUpon>QLRauMA.tt</DependentUpon>
     </Compile>
     <Compile Include="sp_helpdiagramdefinition_Result.cs">
-      <DependentUpon>QLRauMa.tt</DependentUpon>
+      <DependentUpon>QLRauMA.tt</DependentUpon>
     </Compile>
     <Compile Include="sp_helpdiagrams_Result.cs">
-      <DependentUpon>QLRauMa.tt</DependentUpon>
+      <DependentUpon>QLRauMA.tt</DependentUpon>
     </Compile>
     <Compile Include="sysdiagram.cs">
-      <DependentUpon>QLRauMa.tt</DependentUpon>
+      <DependentUpon>QLRauMA.tt</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
@@ -112,12 +112,12 @@
   <ItemGroup>
     <None Include="App.Config" />
     <None Include="packages.config" />
-    <EntityDeploy Include="QLRauMa.edmx">
+    <EntityDeploy Include="QLRauMA.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>QLRauMa.Designer.cs</LastGenOutput>
+      <LastGenOutput>QLRauMA.Designer.cs</LastGenOutput>
     </EntityDeploy>
-    <None Include="QLRauMa.edmx.diagram">
-      <DependentUpon>QLRauMa.edmx</DependentUpon>
+    <None Include="QLRauMA.edmx.diagram">
+      <DependentUpon>QLRauMA.edmx</DependentUpon>
     </None>
   </ItemGroup>
   <ItemGroup>
@@ -127,15 +127,15 @@
     <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="QLRauMa.Context.tt">
+    <Content Include="QLRauMA.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>QLRauMa.edmx</DependentUpon>
-      <LastGenOutput>QLRauMa.Context.cs</LastGenOutput>
+      <DependentUpon>QLRauMA.edmx</DependentUpon>
+      <LastGenOutput>QLRauMA.Context.cs</LastGenOutput>
     </Content>
-    <Content Include="QLRauMa.tt">
+    <Content Include="QLRauMA.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>QLRauMa.edmx</DependentUpon>
-      <LastGenOutput>QLRauMa.cs</LastGenOutput>
+      <DependentUpon>QLRauMA.edmx</DependentUpon>
+      <LastGenOutput>QLRauMA.cs</LastGenOutput>
     </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
