--- a/UI/code/Login_RauMa/DashBoar/DashBoar.csproj
+++ b/UI/code/Login_RauMa/DashBoar/DashBoar.csproj
@@ -127,6 +127,12 @@
     <Compile Include="frmBaoCao.Designer.cs">
       <DependentUpon>frmBaoCao.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmXemChiTietHoaDon.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmXemChiTietHoaDon.Designer.cs">
+      <DependentUpon>frmXemChiTietHoaDon.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QLNhanVien.cs">
@@ -171,6 +177,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmXemBaoCao.resx">
       <DependentUpon>frmXemBaoCao.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmXemChiTietHoaDon.resx">
+      <DependentUpon>frmXemChiTietHoaDon.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
